# livespec

./: .gitignore  .livespec-fleet-manifest.jsonc  .livespec.jsonc  .mise.toml  .mutmut-baseline.json  .vendor.jsonc  AGENTS.md  CHANGELOG.md  NOTICES.md  PHASE_13.md  README.md  branch-protection.json  copier.yml  fleet-manifest.jsonc  graph.fabro  implementation.just  justfile  klsramb8mlbkjvbsg8dirq1rn3lsutvc.darc  lefthook.yml  manifest  memos.jsonl  pyproject.toml  release-please-config.json  run.json  vgbun1qonvki9fisdp0etkjflcth8mbe  vpvcqbvcjcirv4glbs4c2revunvhf3qg  work-items.jsonl
.agents/plugins/: marketplace.json
.ai/: adding-an-adopter.md  agent-disciplines.md  beads-gaps-workarounds.md  ci-gate-discipline.md  dispatcher-drain-operations.md  no-circular-dependency.md  spec-proposal-review.md  verifying-against-the-right-source.md
.beads/: config.yaml  issues.jsonl  metadata.json
.beads/hooks/: commit-msg  post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.claude/: settings.json  skills
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/.codex-plugin/: plugin.json
.claude-plugin/prose/: critique.md  doctor.md  help.md  next.md  propose-change.md  prune-history.md  revise.md  seed.md
.claude-plugin/scripts/: CLAUDE.md
.claude/agents/: CLAUDE.md  livespec-implementer.md
.claude/hooks/: livespec_footgun_guard.py
.claude/plugins/: livespec-bootstrap
.claude/skills/: prototype-autonomous-ready-queue-drain-prompt.md  ready-queue-drain.md
.github/scripts/: export-ci-telemetry.sh
.github/workflows/: auto-enable-merge.yml  auto-update-branches.yml  bump-pin-from-dispatch.yml  ci-selfhosted-shadow.yml  ci.yml  copier-update-drift.yml  e2e-real.yml  release-dispatch.yml  release-please.yml  release-readiness.yml  release-tag.yml
SPECIFICATION/: constraints.md  contracts.md  non-functional-requirements.md  spec.md
SPECIFICATION/proposed_changes/: append-only-store-legibility-and-merge-safe-reduction.md  callability-warn-fail-lever.md  ci-merge-gate-single-all-green-job.md  claude-code-marketplace-json-for-plugin-discovery.md  claude-opus-4-7-critique.md  codex-currency-gate-runtime-aware.md  codex-dogfood-compatibility.md  contract-and-reference-implementations-phase-1.md  conventional-commits-mandate-and-rebase-merge-only.md  coordinating-epic-stale-revise-enforcement.md  coverage-omit-only-not-source-allowlist.md  cross-project-interdependencies.md  declare-livespec-dev-tooling-shared-code-mechanism.md  deferred-item-enforcement-check-scripts.md  deferred-item-front-matter-parser.md  deferred-item-returns-pyright-plugin-disposition.md  deferred-item-task-runner-and-ci-config.md  doctor-static-phase-must-run-in-ci-aggregate.md  doctor-uniform-per-finding-disposition.md  drop-doctor-from-spec-target-enumeration.md  expand-coverage-exclude-also-to-match-impl.md  family-secrets-1password-environment.md  fix-constraints-livespec-runtime-vendored-entries.md  fleet-control-plane-tool-repo-class.md  fleet-plugin-currency-contract.md  implementation-workflow-on-non-functional-requirements.md  intent-preservation-and-design-record-authority.md  livespec-implementation-workflow.md  migrate-auto-memory-project-architecture-entries.md  next-layer-3-discoverability-nudge.md  no-inheritance-allowlist-generic.md  no-stalled-epic-invariant.md  orchestrator-skill-set-contract.md  owned-heading-coverage-todos.md  prompt-qa-harness-machinery.md  propose-change-full-feature-parity.md  python-style-complexity-thresholds.md  python-style-exit-code-contract.md  python-style-file-naming.md  python-style-interpreter-and-python-version.md  (+27 more)
archive/: README.md  work-items.jsonl
archive/bootstrap/: AGENTS.md  STATUS.md  v039-d5-spike.md
archive/prompts/: BUILD-memory-guard-bug.md  dev-tooling-single-source-convergence-handoff.md  fleet-terminology-migration-classification-inventory.md  governed-repo-lifecycle-handoff.md  livespec-zs22-handoff-planning-lane.md  worktree-discipline-pack-handoff.md
bootstrap/: AGENTS.md  STATUS.md  decisions.md  open-issues.md  v032-quality-report.md
bootstrap/.claude-plugin/: marketplace.json
brainstorming/: AGENTS.md
brainstorming/approach-1-openspec-inspired/: PROPOSAL.md
brainstorming/approach-2-mlspec-based/: 2026-04-19-mlspec-terminology-and-structure-summary.md  PROPOSAL.md
brainstorming/approach-2-nlspec-based/: 2026-04-19-nlspec-lifecycle-diagram-detailed.md  PLAN_TO_BOOTSTRAP_SPECIFICATION_AND_REPO.md  PROPOSAL.md  bash-skill-script-style-requirements.md  critique-interview-prompt.md  deferred-items.md  livespec-nlspec-spec.md  nlspec-spec.md  prior-art.md  python-skill-script-style-requirements.md
dev-tooling/: CLAUDE.md  claude_plugin_registry.py  git-hook-wrapper.sh  reap_stale_worktrees.py  reap_stale_worktrees_locks.py  spec_clauses.py  vendor_update.py
dev-tooling/checks/: CLAUDE.md  _red_green_replay_modes.py  all_declared.py  assert_never_exhaustiveness.py  behavior_scenario_link.py  branch_protection_alignment.py  (+41 more)
docs/: installation.md  livespec-installation-prompt.md
implementation-gaps/: current.json  current.schema.json
prior-art/: nlspec-spec.md
prompts/: agent-instruction-dot-ai-convention-prompt.md  dev-tooling-single-source-convergence-handoff.md  doctor-static-fleet-enforcement-prompt.md  fleet-release-please-epic.md  fleet-release-please-prompt.md  fleet-terminology-migration-epic.md  fleet-terminology-migration-prompt.md  governed-repo-lifecycle-handoff.md  heading-coverage-gate-green-prompt.md  livespec-overseer-startup.md  livespec-zs22-handoff-planning-lane.md  mermaid-diagram-handoff.md  worktree-discipline-pack-epic.md  worktree-discipline-pack-handoff.md  worktree-discipline-pack-prompt.md
research/: CLAUDE.md
tests/: CLAUDE.md  conftest.py  heading-coverage.json  test_architecture_diagram_single_source.py  test_doctor_disposition_prose.py  test_intent_preservation_lockstep.py  test_lifecycle_diagram_single_source.py  test_plugin_distribution.py  test_template_beads_access_guard.py  test_template_github_auth_guard.py  test_workflow_planes_terminology.py
(+1649 files in other folders)
