# pyproject.toml — livespec dev tooling configuration.
#
# Authoritative sources (DO NOT diverge from these without
# producing a new PROPOSAL.md vNNN snapshot first):
#
#   - PROPOSAL.md §"Developer-time dependencies (livespec repo
#     only)" — uv-managed dev deps per v024 (mise pins only the
#     non-Python binaries `uv`, `just`, `lefthook`).
#   - PROPOSAL.md §"Runtime dependencies — Vendored pure-Python
#     libraries" — returns vendoring (BSD-3-Clause). NO
#     `returns_pyright_plugin` vendored: per v025 D1, pyright
#     has no plugin system (microsoft/pyright#607) and no such
#     upstream artifact exists — the v018 Q4 closure of
#     `returns-pyright-plugin-disposition` was rescinded and
#     re-closed in v025. See `[tool.pyright]` below: NO
#     `pluginPaths` entry.
#   - PROPOSAL.md §"Runtime dependencies — Developer-time
#     dependencies → Typechecker decision (v018 Q4)" — pyright
#     (NOT basedpyright); rationale = the seven strict-plus
#     diagnostics manually enabled below provide the load-bearing
#     guardrails against agent-authored-code failure patterns.
#   - python-skill-script-style-requirements.md §"Linter and
#     formatter" — ruff 27-category config + pylint thresholds
#     + TID banned imports.
#   - python-skill-script-style-requirements.md §"Type safety"
#     — pyright strict + the seven strict-plus diagnostics.
#   - python-skill-script-style-requirements.md §"Code coverage"
#     — 100% line+branch threshold.
#   - python-skill-script-style-requirements.md §"Import-Linter
#     contracts (minimum configuration)" — two contracts
#     (parse-and-validate-are-pure forbidden + layered-architecture
#     layers); per v017 Q3 the v012 L15a third contract was
#     retracted (raise-discipline is raise-site-enforced only by
#     check-no-raise-outside-io).
#   - python-skill-script-style-requirements.md §"Mutation
#     testing as release-gate" — mutmut runtime config only;
#     NO `threshold` key here (the ratchet-with-ceiling
#     semantics live in `just check-mutation`, which reads
#     .mutmut-baseline.json and computes the floor; a static
#     threshold = 80 here would misstate the spec, see
#     PROPOSAL.md DoD 10).
#
# NO [build-system] section: livespec is not a published PyPI
# package; it ships via Claude Code plugin bundling.
#
# Phase 6 migrates this rationale into SPECIFICATION/constraints.md;
# Phase 8 items 8 and 9 become bookkeeping closes pointing at the
# Phase-1 commit that established this file.

[project]
name = "livespec"
version = "0.0.0"
requires-python = ">=3.10,<3.11"

# Per v024: NO [project.dependencies] table. livespec ships nothing
# as a runtime dep — the bundle's _vendor/ tree IS the runtime
# (see PROPOSAL.md §"Runtime dependencies — Vendored pure-Python
# libraries"). End users install nothing beyond Python 3.10+.

[dependency-groups]
# Per v024: every Python dev tool is uv-managed via this table
# (resolved into uv.lock; installed into a project-local .venv via
# `uv sync --all-groups`). Mise pins only the non-Python binaries
# in .mise.toml. typing_extensions is intentionally NOT here: it
# is vendored at scripts/_vendor/typing_extensions/ per v013 M1.
dev = [
    "ruff==0.8.6",
    "pyright==1.1.391",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-icdiff==0.9",
    "pytest-xdist==3.8.0",
    "hypothesis==6.122.3",
    "hypothesis-jsonschema==0.23.1",
    "mutmut==3.2.3",
    "import-linter==2.1",
]

# ---------------------------------------------------------------------------
# Ruff — sole linter, formatter, import-sorter, complexity checker.
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 100
# Vendored third-party libraries are exempt from livespec's own style
# rules per python-skill-script-style-requirements.md line 294-296.
# `__pycache__/` mirrors `[tool.pyright].exclude`.
extend-exclude = ["**/_vendor/**", "**/__pycache__/**"]

[tool.ruff.lint]
# 27 categories total. v011 baseline (11) + v012 additions (16).
# Per python-skill-script-style-requirements.md §"Linter and
# formatter".
select = [
    # ----- v011 baseline (11 categories) -----
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "C90",   # mccabe complexity
    "N",     # pep8-naming
    "RUF",   # ruff-specific
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    # ----- v012 additions (16 categories) -----
    "TRY",   # tryceratops — pairs with v011 K10 domain-vs-bugs split
    "FBT",   # flake8-boolean-trap — reinforces K4 keyword-only discipline
    "PIE",   # flake8-pie — miscellaneous anti-patterns
    "SLF",   # flake8-self — bans cross-class _-prefixed access
    "LOG",   # flake8-logging — logging discipline
    "G",     # flake8-logging-format — kwargs-only in log calls
    "TID",   # flake8-tidy-imports — no relative imports + banned-imports
    "ERA",   # eradicate — bans commented-out code (LLM artifact)
    "ARG",   # flake8-unused-arguments
    "RSE",   # flake8-raise — `raise X` over `raise X()`; raise...from discipline
    "PT",    # flake8-pytest-style
    "FURB",  # refurb — modern-Python refactor hints
    "SLOT",  # flake8-slots
    "ISC",   # flake8-implicit-str-concat — complements pyright's diagnostic
    # ISC001 (implicit-str-concat on one line) conflicts with the
    # ruff formatter — the formatter emits `f"..." f"..."` when
    # joining wraps; ISC001 then flags the result. Disabled per
    # ruff's documented formatter-conflict guidance. ISC002 and
    # ISC003 stay active to flag genuine multi-line concats.
    "T20",   # flake8-print — bans print/pprint (pairs with check-no-write-direct)
    "S",     # flake8-bandit — security anti-patterns
]
ignore = [
    "ISC001",  # implicit-str-concat on one line; conflicts with the formatter
]

[tool.ruff.lint.pylint]
max-args = 6
max-positional-args = 6
max-branches = 10
max-statements = 30

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"abc.ABC" = { msg = "use typing.Protocol; see python-skill-script-style-requirements.md §'Type safety — Inheritance and structural typing'" }
"abc.ABCMeta" = { msg = "use typing.Protocol; see python-skill-script-style-requirements.md §'Type safety — Inheritance and structural typing'" }
"abc.abstractmethod" = { msg = "use typing.Protocol; see python-skill-script-style-requirements.md §'Type safety — Inheritance and structural typing'" }
"pickle" = { msg = "arbitrary-code-execution surface on load(); livespec uses JSON / JSONC for all serialization" }
"marshal" = { msg = "arbitrary-code-execution surface on load(); livespec uses JSON / JSONC for all serialization" }
"shelve" = { msg = "arbitrary-code-execution surface on load(); livespec uses JSON / JSONC for all serialization" }

[tool.ruff.lint.per-file-ignores]
# Shebang-wrapper contract (python-skill-script-style-requirements.md
# lines 1664-1668) mandates exactly: shebang → docstring → `from
# _bootstrap import bootstrap` → `bootstrap()` → `from livespec.<...>
# import main` → `raise SystemExit(main())`. The post-`bootstrap()`
# import structurally violates I001 (un-sorted imports) and E402
# (module-level import not at top); the docstring's
# `Shebang wrapper for <name>. No logic; see livespec.<...> for
# implementation.` template overflows 100 chars for longer module
# names (E501). All three are spec-mandated patterns, exempted only
# for the wrapper subtree.
".claude-plugin/scripts/bin/*.py" = ["I001", "E402", "E501"]
# `_bootstrap.py` carries the canonical Python-version check per
# python-skill-script-style-requirements.md lines 1697-1700:
# `if sys.version_info < (3, 10): raise SystemExit(127)`. UP036
# would mark this dead code because target-version = "py310", but
# the check is the bootstrap mechanism itself — it MUST remain.
".claude-plugin/scripts/bin/_bootstrap.py" = ["UP036"]
# v013 M5 mandates a flat one-level LivespecError hierarchy
# (UsageError, PreconditionError, ValidationError, etc. all
# subclass LivespecError directly; further subclassing forbidden).
# `LivespecError` raise-sites are restricted to `livespec/io/**`
# (check-no-raise-outside-io). Domain-meaningful messages MUST
# embed runtime context (which path/value/operation failed), so
# the messages are constructed at the raise-site as f-strings:
# `raise PreconditionError(f"file not found: {path}")`. TRY003
# (tryceratops: "Avoid specifying long messages outside the
# exception class") would force per-context exception subclasses,
# which v013 M5 forbids. Per-file-ignore scoped to the only place
# LivespecError is raised.
".claude-plugin/scripts/livespec/io/**.py" = ["TRY003"]
# pytest convention: tests use bare `assert` for assertions.
# S101 (flake8-bandit "use of assert detected") flags every test;
# the discipline applies to shipped code, not test-time assertions.
# PLR2004 (pylint "magic value used in comparison") flags fixture-
# integral literals like `assert len(value.files) == 2`; in tests
# the literal IS the fixture's expected value, so extracting to a
# named constant adds noise without value. Standard Python testing
# convention is to allow magic values in test assertions.
# S603 / S607 (flake8-bandit "untrusted-input subprocess") flag
# every `subprocess.run(...)` call in tests. Integration tests
# shell out to git, python, etc. with fixed argv lists; the
# patterns are documented at the call site. PT018 (pytest-style
# "composite assertion") flags `assert x and y` patterns; for
# tests, single-statement composite assertions are idiomatic.
# S108 (/tmp use) flags Path("/tmp/...") in fixtures; pytest's
# tmp_path is preferred but explicit /tmp is sometimes needed.
# Tests carveout (rationale per category):
# - S101: bare assert is the pytest convention
# - PLR2004: magic literals in assertions are integral to fixtures
# - S603/S607: subprocess.run with fixed argv shells out to
#   git/python in integration tests
# - PT018: composite assertions are idiomatic
# - S108: explicit /tmp paths are sometimes needed in fixtures
# - S105: variable names ending in "token" trigger the
#   password heuristic (e.g. `expected_token`); zero real
#   credentials live in tests
# - TRY003: `raise AssertionError(f"...long message...")` is the
#   canonical pytest failure-context pattern
# - E501: test module docstrings carry descriptive titles like
#   "Outside-in test for `dev-tooling/checks/<name>.py` — <desc>"
#   which routinely exceed 100 chars; the 100-char ceiling is
#   over-strict for documentation
"tests/**.py" = [
    "S101", "PLR2004", "S603", "S607", "PT018", "S108", "S105", "TRY003", "E501",
]
# dev-tooling/checks/ scripts shell out to git, ruff, python via
# subprocess.run with fixed argv lists per the canonical-target
# invocation contract. S603/S607/S404 are over-strict for this
# documented pattern; the inline-noqa rationales were adding
# noise. S105 covers TRAILER-token constants whose names trip
# the password heuristic.
"dev-tooling/checks/*.py" = ["S603", "S607", "S404", "S105"]

# ---------------------------------------------------------------------------
# Pyright — strict + seven strict-plus diagnostics + returns plugin.
# ---------------------------------------------------------------------------

[tool.pyright]
include = [".claude-plugin/scripts", "dev-tooling"]
exclude = ["**/_vendor/**", "**/__pycache__/**"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

# Seven strict-plus diagnostics (v012 L1 + L2). Each closes a
# documented LLM-authored-code failure pattern with a one-line
# config change. See python-skill-script-style-requirements.md
# §"Type safety" for per-diagnostic rationale.
reportUnusedCallResult = "error"
reportImplicitOverride = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryIsInstance = "error"
reportImplicitStringConcatenation = "error"

# NO pluginPaths entry: per v025 D1, pyright has no plugin
# system (microsoft/pyright#607: maintainer rejected plugin
# support in 2020, formalized 2021, reaffirmed 2024) and no
# `returns_pyright_plugin` exists upstream (dry-python/returns
# ships mypy/pytest/hypothesis plugins but not pyright; issue
# dry-python/returns#1513 closed 2022 explicitly stating
# pyright support is not possible). The v018 Q4 closure of
# `returns-pyright-plugin-disposition` was rescinded and
# re-closed in v025 with the revised disposition: no plugin
# vendored. The seven strict-plus diagnostics above remain the
# load-bearing guardrails against silent Result / IOResult
# discards. Pyright still type-checks Result[T, E] generic
# parameters via standard generic inference; flow-narrowing
# through bind chains is lossier than under mypy-with-plugin,
# requiring occasional explicit annotations or cast() calls
# at combinator boundaries. Unnecessary casts get caught by
# reportUnnecessaryCast (above) so the friction surfaces at
# call sites rather than hiding in opaque type-ignores.

# ---------------------------------------------------------------------------
# Pytest — pytest-cov + pytest-icdiff wiring.
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# `_bootstrap.bootstrap()` sets up sys.path at runtime for the
# shebang wrappers (adds .claude-plugin/scripts and
# .claude-plugin/scripts/_vendor). Pytest needs the same paths
# during collection so `import livespec` and the vendored libs
# resolve. The wrapper-coverage tests under tests/bin/ stub
# these imports via sys.modules and don't depend on pythonpath;
# everything else does.
pythonpath = [
    ".claude-plugin/scripts",
    ".claude-plugin/scripts/_vendor",
]
# pytest-icdiff is auto-loaded via its entry_points.txt (registers
# as the `icdiff` pytest11 plugin) and produces nicer diffs by
# default; no `--icdiff` flag is needed (the plugin only adds
# `--icdiff-cols` and `--icdiff-show-all-spaces` for tuning).
addopts = [
    "--strict-markers",
    "--strict-config",
    # `--import-mode=importlib` lets paired tests share a basename
    # across mirror trees (e.g., `tests/livespec/schemas/dataclasses/
    # test_finding.py` and `tests/livespec/validate/test_finding.py`)
    # without pytest's legacy `prepend` mode triggering same-basename
    # module collisions. Recommended modern pytest import mode; no
    # `__init__.py` files needed in the `tests/` tree.
    "--import-mode=importlib",
]
markers = [
    "mock_only: test runs only in mock tier (LIVESPEC_E2E_HARNESS=mock); skipped in real tier",
]

# ---------------------------------------------------------------------------
# Coverage — 100% line + branch (per python-skill-script-style-requirements.md
# §"Code coverage" and PROPOSAL.md DoD).
# ---------------------------------------------------------------------------

[tool.coverage.run]
branch = true
# Coverage uses an `omit`-only blocklist (no `source` allowlist).
# The dev-tooling/checks/ test suite invokes check scripts via
# `subprocess.run` with `cwd=tmp_path`; pytest-cov's pth-installed
# startup hook instruments those children, but a relative `source`
# list (e.g., `dev-tooling`) resolves against the subprocess's
# cwd (the tmp_path), which doesn't contain `dev-tooling/`, so
# the actual `<repo>/dev-tooling/checks/<name>.py` would be
# silently dropped from the report. Removing `source` entirely
# lets every imported module be measured, then the `omit` patterns
# below filter out everything that isn't first-party livespec
# code:
#
#   - `*/_vendor/*` — vendored third-party libs (returns,
#     structlog, jsonschema, typing_extensions); matches both
#     relative (`./.claude-plugin/scripts/_vendor/...`) and
#     absolute (`/abs/path/_vendor/...`) forms via the leading
#     `*/` prefix. The carve-out matches `[tool.ruff].extend-exclude`
#     and `[tool.pyright].exclude` above.
#   - `*/.venv/*` — the project-local venv (uv/pytest-cov
#     transitive imports under .venv/lib/...).
#   - `*/site-packages/*` — defense-in-depth for stdlib /
#     installed-pkg paths in case the venv is named differently.
#   - `*/__pycache__/*` — bytecode cache (shouldn't appear in
#     measurement, but matches the pyright/ruff exclude pattern).
#
# The `tests/` tree isn't omitted: pytest-cov already excludes
# test files from measurement by default (it instruments the code
# under test, not the test code itself).
omit = [
    "*/_vendor/*",
    "*/.venv/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    # E2E and prompt-QA test infrastructure is excluded from coverage
    # per SPECIFICATION/contracts.md §"E2E harness contract" and
    # §"Prompt-QA harness contract §"Python-rule compliance".
    "tests/e2e/*",
    "tests/prompts/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    # `case _:` arms are structurally unreachable by spec mandate:
    # python-skill-script-style-requirements.md lines 1054-1066
    # require every `match` statement to terminate with
    # `case _: assert_never(<subject>)`, and
    # `dev-tooling/checks/assert_never_exhaustiveness.py` enforces
    # the body is `assert_never(<subject>)` and nothing else. The
    # arm is therefore unreachable when the subject's declared type
    # is exhaustively handled by the prior arms (the universal
    # case in this codebase). Excluding the line excludes the
    # indented body too via coverage.py's compound-statement rule,
    # which dismisses the `assert_never` line in the same sweep.
    # Style-doc paired update extends the structural-exclusion
    # enumeration from 3 patterns to 4.
    "case _:",
]

# ---------------------------------------------------------------------------
# Import-Linter — two authoritative contracts (v013 M7, narrowed by v017 Q3).
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["livespec"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "parse-and-validate-are-pure"
type = "forbidden"
source_modules = ["livespec.parse", "livespec.validate"]
# Two style-doc-listed forbids are intentionally absent (see the
# style doc overlay note below the contract block):
#   - returns.io: import-linter v2 rejects subpackages of external
#     packages. IOResult/IOFailure misuse in pure layers is caught
#     at raise-site by check-no-raise-outside-io.
#   - pathlib: livespec.types defines `SpecRoot = NewType("SpecRoot",
#     Path)`, which forces a runtime pathlib import that flows
#     transitively into pure layers via the wire dataclasses. The
#     no-I/O-at-runtime intent is caught by check-no-write-direct
#     and the supervisor-discipline / no-raise-outside-io AST
#     checks, none of which fire on import-for-typing alone. Per
#     the style doc's architecture-vs-mechanism principle, this
#     reassignment is permitted.
forbidden_modules = [
    "livespec.io",
    "subprocess",
    "socket",
    "http",
    "urllib",
]

[[tool.importlinter.contracts]]
name = "layered-architecture"
type = "layers"
layers = [
    "livespec.commands | livespec.doctor",
    "livespec.io",
    "livespec.validate",
    "livespec.parse",
]

# ---------------------------------------------------------------------------
# Mutmut — runtime config ONLY. Per python-skill-script-style-requirements.md
# §"Mutation testing as release-gate": NO threshold key here. The
# ratchet-with-ceiling semantics (floor = baseline_kill_rate, capped at 80%)
# live entirely in `just check-mutation`, which reads .mutmut-baseline.json
# and computes the floor at runtime. A static threshold = 80 here would
# misstate the spec (PROPOSAL.md DoD 10).
# ---------------------------------------------------------------------------

[tool.mutmut]
paths_to_mutate = [
    ".claude-plugin/scripts/livespec/parse",
    ".claude-plugin/scripts/livespec/validate",
]
runner = "python -m pytest -x -q"
tests_dir = "tests"
